[metadata]
name = requestinjector
version = 0.9.3
author = James Bonifield
author_email = bonifield.tools@gmail.com
description = scan a URL using a given wordlist with optional URL transformations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bonifield/RequestInjector
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
